--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "storybook": "npm run build:storybook && start-storybook -p 12123 -s .storybook/static/,node_modules/@sap-theming",
     "storybook:ci": "npm run storybook -- --ci --quiet",
     "storybook:static": "rimraf storybook-static && npm run build:storybook && STORYBOOK_ENV=docs build-storybook -c .storybook -o storybook-static -s .storybook/static/,node_modules/@sap-theming --docs",
+    "storybook:chromatic": "rimraf storybook-chromatic && npm run build:storybook && STORYBOOK_ENV=chromatic build-storybook -c .storybook -o storybook-chromatic -s .storybook/static/",
     "test:coverage:watch": "npm run test:coverage -- --watch",
     "test:coverage": "npm run test:dev -- --coverage",
     "test:coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js || echo -e \"Coveralls failed.\"",
@@ -97,6 +98,7 @@
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.23",
     "babel-preset-react-app": "^9.1.2",
+    "chromatic": "^5.4.0",
     "core-js": "^3.1.4",
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
